--- a/src/styles.css
+++ b/src/styles.css
@@ -1,53 +1,51 @@
+.container {
+  position:relative;
+  width:400px;
+}
+
 .avatar {
-  display: inline-block;
+  display: block;
   width:315px;
   vertical-align: top;
-  height:305px;
+  height:235px;
+  padding-left:20px;
 }
 
 .tabs {
-  display: inline-block;
-  width:100px;
-  vertical-align: top;
-  padding-top:50px;
-  padding-bottom: 20px;
-  padding-left:10px;
-  overflow: hidden;
-  position: relative;
-  left:1px;
-  height:305px;
   box-sizing: border-box;
+  display: block;
+  position: absolute;
+  right:50px;
+  top:18px;
+  width:100px;
 }
 
 .tab {
-  font-size:13px;
+  font-size:12px;
+  text-align: center;
   border:1px solid transparent;
   padding: 4px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-radius: 4px;
   cursor: pointer;
   color:#007bff;
 }
 
 .selectedTab {
-  border-color:#dee2e6;
-  border-right-color: white;
-  color: #495057;
-  box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.2);
+  background: #007bff;
+  color: white;
 }
 
 .tabpanes {
+  box-sizing: border-box;
   display: inline-block;
   width: 400px;
-  padding-left:30px;
-  border-left:1px solid #dee2e6;
-  height:305px;
 }
 
 .tabpane {
+  box-sizing: border-box;
   display: none;
-  height:305px;
-  width:450px;
+  width:400px;
+  padding:0 10px 10px;
 }
 
 .visible {
@@ -82,7 +80,7 @@
   display: block;
   width: 100%;
   height:20px;
-  padding:10px 60px;
+  padding:5px 60px;
 }
 
 .divider > div {
@@ -90,9 +88,22 @@
   background-color: #dee2e6;
 }
 
+.colorContainer {
+  display:flex;
+  align-items: center;
+  justify-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+
 .color {
   display: inline-block;
-  height: 30px;
-  width:30px;
+  height: 26px;
+  width:23px;
   cursor: pointer;
+}
+
+.color[color=#FFFFFF] {
+  border:1px solid #ccc;
 }
